fix on select close, the page is jumping up. the soltuion was to replace the dummy div with a button instead

--- a/src/components/SelectDropDown/SelectDropDown.module.css
+++ b/src/components/SelectDropDown/SelectDropDown.module.css
@@ -26,8 +26,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
   border-bottom: 1px solid #8e8e8e;
   padding-left: 24px;
+  background-color: #ffffff;
+}
+
+.dummy:active,.dummy:focus{
+  outline: none;
 }
 
 .icon{
